@@ -8,7 +8,8 @@ VDR 1.7.29
 	channels update.
 	Dynamic audio selection only if number of audio channels > 1 and not "NAR" (uk mostly)
 	<blue> key - EPG info always start at Now.
-	
+	Save position when poweroff during playback // Resume on poweron
+
 
 0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica, iConcerts, Animax)
 	Fix: Right month is now shown in recordings menu.
